# rustserver

./: .gitignore  Cargo.toml  README.md
diox/: Cargo.toml  Trunk.toml  index.html
diox/src/: lib.rs  main.rs  style.css
server/src/: main.rs
src/: main.rs
